<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bmi_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:text="@string/middle_tv"
        android:textSize="@dimen/bmi_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginEnd="@dimen/space_small"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mass_tv_m" />

        <EditText
            android:id="@+id/massInput"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_tv"
            android:ems="10"
            android:inputType="number|numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_large" />

        <TextView
            android:id="@+id/height_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_tv_m" />

        <EditText
            android:id="@+id/heightInput"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_tv"
            android:ems="10"
            android:inputType="number|numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_large" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>